plugins {
    id "com.gradleup.shadow" version "${shadow_version}" apply false
    id "net.fabricmc.fabric-loom" version "${loom_version}" apply false
}

// The root project aggregates the final artifacts into its own build/ directory,
// so it needs a base plugin to get a clean task that removes them.
apply plugin: "base"

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: "java-library"

    version = mod_version

    java.toolchain.languageVersion = JavaLanguageVersion.of(25)

    tasks.withType(JavaCompile).configureEach {
        options.release = 25
        options.encoding = "UTF-8"
    }

    dependencies {
        testImplementation "org.junit.jupiter:junit-jupiter:${junit_version}"
        testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    }

    tasks.named("test") {
        useJUnitPlatform()

        // Show test stdout/stderr in the build output, otherwise it is only captured
        // in the XML/HTML report and the build console stays silent.
        testLogging {
            showStandardStreams = true
        }

        // DMCC's logger creates "logs/DMCC_<timestamp>.log" relative to the working
        // directory. Run tests inside build/ so they never write into the source tree.
        workingDir = layout.buildDirectory.get().asFile
    }

    processResources {
        def propertiesToExpand = new HashMap<String, Object>()
        ["mod_version", "jda_version", "slf4j_api_version", "jackson_version", "okhttp_version", "netty_version", "jemoji_version"].each {
            propertiesToExpand.put(it, providers.gradleProperty(it).get())
        }
        propertiesToExpand.put("version", version.toString())
        filesMatching(["**/*.txt", "**/*.yml", "**/*.toml", "**/*.json"]) {
            expand(propertiesToExpand)
        }
    }
}
